<resources>
    <string name="app_name">BBC News Reader</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_news">News</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_help">Help</string>
    <string name="mailinglist">Sign up to our mailing list for updates and news.</string>
    <string name="getNews">GET NEWS</string>
    <string name="Favorites">Favorites</string>
    <string name="EnterEmail">Enter your email:</string>
    <string name="Submit">Submit</string>



</resources>