<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_home2"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/menu_home"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/nav_news2"
        android:icon="@drawable/ic_news"
        android:title="@string/menu_news"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/nav_favs2"
        android:icon="@drawable/ic_favorite"
        app:showAsAction="always"
        android:title="@string/menu_favorites" />
    <item
        android:id="@+id/nav_help2"
        app:showAsAction="always"
        android:icon="@drawable/ic_help"
        android:title="@string/menu_help" />
</menu>